--- a/demo.html
+++ b/demo.html
@@ -1,23 +1,31 @@
-<html ng-app>
+<!DOCTYPE html>
+<html data-ng-app="ProgressCircleApp">
+
   <head>
     <meta charset="utf-8">
-    <title>Progress Circle</title>
+    <title>Progress Circle App</title>
     <script type="text/javascript" src="vendor/bower/angular/angular.js"></script>
-    <script type="text/javascript" src="dist/my-package.js"></script>
     <script>
-      function ProgressCircle($scope){
+      var app = angular.module("ProgressCircleApp", [])
+      app.controller("ProgressCircle", function($scope) {
         $scope.actual = 0;
         $scope.expected = 0;
-      }
+      })
     </script>
+
   </head>
-  <body ng-controller="ProgressCircle">
-    Actual: <input ng-model="actual" type="text"/>
-    <br>
-    Expected: <input ng-model="expected" type="text"/>
-    <br>
-    Actual: {{actual}} Expected: {{expected}}
-    <div progress> init </div>
+
+  <body>
+    <div id='container' data-ng-controller="ProgressCircle">
+      Actual: <input ng-model="actual" type="text"/>
+      <br>
+      Expected: <input ng-model="expected" type="text"/>
+      <br>
+      Actual: {{actual}} Expected: {{expected}}
+      <div progress-circle> init </div>
+    </div>
+    
+    <script type="text/javascript" src="dist/my-package.js"></script>
   </body>
 </html>
 
