Got circle & arcs rendering

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Progress Circle App</title>
     <script type="text/javascript" src="vendor/bower/angular/angular.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
     <script>
       var app = angular.module("ProgressCircleApp", [])
       app.controller("ProgressCircle", function($scope) {
@@ -28,17 +29,3 @@
     <script type="text/javascript" src="dist/my-package.js"></script>
   </body>
 </html>
-
-
-
-<!-- <div id='container' data-ng-controller='DemoCtrl'>
-      
-    </div>
-    <script type="text/javascript" src="vendor/bower/angular/angular.js"></script>
-    <script type="text/javascript" src="dist/my-package.js"></script>
-    <script type='text/javascript'>
-      var app = angular.module("DemoApp", []);
-      app.controller("DemoCtrl", function($scope) {
-        $scope.myLabel = "Hello, World";
-      }); -->
-      <!-- </script> -->
